--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h2>TikTok Authorization Code:</h2>
-  <p id="code">tiktok-developers-site-verification=3hsBXLw6gDqn6k8NkYZMEj8u3FPQZicT</p>
+  <p id="tiktok-developers-site-verification=3hsBXLw6gDqn6k8NkYZMEj8u3FPQZicT"></p>
 
   <script>
     const params = new URLSearchParams(window.location.search);
