--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- TikTok OAuth Redirect Page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
 </head>
 <body>
   <h2>TikTok Authorization Code:</h2>
-  <p id="tiktok-developers-site-verification=3hsBXLw6gDqn6k8NkYZMEj8u3FPQZicT"></p>
+  <p id="code"></p>
 
   <script>
     const params = new URLSearchParams(window.location.search);
