--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TikTok OAuth Callback</title>
 </head>
 <body>
   <h2>TikTok Authorization Code:</h2>
-  <p id="code"></p>
+  <p id="code">در حال بارگذاری...</p>
 
   <script>
     const params = new URLSearchParams(window.location.search);
